------------------------------------------------------------------------
r2160 | gaser | 2022-12-08 14:12:11

Changed paths:
 M CHANGES.txt
 M Contents.m
 M cat_conf_factorial.m
 M cat_surf_results.m
 M cat_vol_slice_overlay.m
 M cat_vol_slice_overlay_ui.m
 M doc/cat.html


Changed: Added new clip flag to cat_vol_slice_overlay that replaces the func 
         flag and allows to create colorbar that is gray for values below
         the threshold.
Changed: Updated cat_surf_results to use new clipping flag for columes.         
Fixed:   Corrected check for fields for voxel-wise covariates in 
         cat_conf_factorial.m
------------------------------------------------------------------------
r2159 | gaser | 2022-12-07 15:18:51

Changed paths:
 M CHANGES.txt
 M Contents.m
 M cat_conf_factorial.m
 M cat_conf_stools.m
 M doc/cat.html
 M doc/index.html


Changed: Updated help text in cat_conf_stools.m.
Fixed:   Corrected file selection in cat_conf_factorial.m that hided meshes.
------------------------------------------------------------------------
r2158 | rdahnke | 2022-12-03 14:14:35

Changed paths:
 M CHANGES.txt
A  cat_main_report.m


New:    Added cat_main_report?
------------------------------------------------------------------------
r2157 | rdahnke | 2022-12-03 14:10:57

Changed paths:
 M CHANGES.txt


New:    Added cat_main_report?
------------------------------------------------------------------------
r2156 | rdahnke | 2022-12-03 14:08:53

Changed paths:
 M CHANGES.txt
 M cat_conf_tools.m


Fixed:    Small corrections on the CAT report batch.
------------------------------------------------------------------------
r2155 | gaser | 2022-12-02 16:37:30

Changed paths:
 M CHANGES.txt


Changed: Added contrast field to cat_conf_factorial to define contrasts for 
         voxel-wise covariate.
Fixed:   Corrected fieldnames in cat_stat_check_SPM that were different.
------------------------------------------------------------------------