@@ -32,6 +32,7 @@ TEST=0
 fg=0
 bids=0
 bids_folder=
+nojvm=""
 
 ########################################################
 # run main
